--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --hot --inline --config ./webpack/webpack.dev",
-    "production": "rimraf dist && NODE_ENV=production webpack --config ./webpack/webpack.prod --progress --profile --bail"
+    "dev": "webpack-dev-server --hot --inline --config ./webpack/dev.config",
+    "production": "rimraf dist && NODE_ENV=production webpack --config ./webpack/prod.config --progress --profile --bail"
   },
   "repository": {
     "type": "git",
