--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --hot --inline --config ./webpack/dev.config",
-    "production": "rimraf dist && NODE_ENV=production webpack --config ./webpack/prod.config --progress --profile --bail"
+    "dev": "webpack-dev-server --hot --inline --config ./webpack/dev.conf",
+    "production": "rimraf dist && NODE_ENV=production webpack --config ./webpack/prod.conf --progress --profile --bail",
+    "test": "NODE_ENV=development karma start ./webpack/karma.conf --single-run"
   },
   "repository": {
     "type": "git",
@@ -52,5 +53,22 @@
     "style-loader": "^0.13.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-immutable": "^1.6.0",
+    "enzyme": "^3.0.0",
+    "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
+    "karma-chai-as-promised": "^0.1.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.4",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sinon": "^1.0.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.4",
+    "mocha": "^3.5.3"
   }
 }
