--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --hot --inline --config ./webpack/dev.conf",
     "production": "rimraf dist && NODE_ENV=production webpack --config ./webpack/prod.conf --progress --profile --bail",
-    "test": "NODE_ENV=development karma start ./webpack/karma.conf --single-run"
+    "test": "karma start ./webpack/karma.conf"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "babel-loader": "6.2.6",
     "babel-plugin-transform-decorators": "6.13.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-polyfill": "6.16.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
@@ -34,6 +34,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
     "react": "^16.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.0.0",
@@ -63,12 +64,16 @@
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.4",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sinon": "^1.0.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.4",
-    "mocha": "^3.5.3"
+    "mocha": "^3.5.3",
+    "phantomjs-polyfill": "0.0.2",
+    "sinon": "^4.0.0",
+    "sinon-as-promised": "^4.0.3"
   }
 }
