--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-immutable": "^1.6.0",
     "enzyme": "^3.0.0",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
