--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^16.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.0.0",
+    "react-helmet": "^5.2.0",
     "react-hot-loader": "^1.3.1",
     "react-intl": "^2.4.0",
     "react-intl-redux": "^0.6.0",
