--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-immutable": "^1.6.0",
     "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
     "istanbul-instrumenter-loader": "^0.2.0",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
@@ -76,6 +77,7 @@
     "karma-webpack": "^2.0.4",
     "mocha": "^3.5.3",
     "phantomjs-polyfill": "0.0.2",
+    "react-test-renderer": "^16.0.0",
     "sinon": "^4.0.0",
     "sinon-as-promised": "^4.0.3"
   }
