--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development webpack-dev-server --hot --inline --config ./webpack/dev.conf",
-    "production": "rimraf dist && NODE_ENV=production webpack --config ./webpack/prod.conf --progress --profile --bail",
+    "start": "NODE_ENV=development webpack-dev-server --hot --inline --config ./webpack/dev.conf",
+    "build": "rimraf dist && NODE_ENV=production webpack --config ./webpack/prod.conf --progress --profile --bail",
     "test": "karma start ./webpack/karma.conf"
   },
   "repository": {
