--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "babel": "6.5.2",
     "babel-core": "6.18.0",
+    "babel-eslint": "^7.2.3",
     "babel-generator": "6.18.0",
     "babel-loader": "6.2.6",
     "babel-plugin-transform-decorators": "6.13.0",
@@ -31,9 +32,21 @@
     "babel-preset-stage-0": "6.16.0",
     "babel-register": "6.18.0",
     "css-loader": "^0.25.0",
+    "eslint": "^4.5.0",
+    "eslint-config-semistandard": "^11.0.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-plugin-chai-friendly": "^0.4.0",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.30.1",
+    "husky": "^0.14.3",
     "node-sass": "^4.5.3",
     "react": "^16.0.0",
     "react-addons-test-utils": "^15.6.2",
