--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets": ['es2015', 'stage-0', 'react']
+  "presets": ["react", ["env", { "modules": false }]],
+  "env": {
+    "test": {
+      "plugins": ["istanbul"],
+      "presets": ["react", ["env"]] // https://github.com/vuejs-templates/webpack/issues/528
+    }
+  }
 }
