--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint --format node_modules/eslint-friendly-formatter --ext .jsx --ext .js src && stylelint ./src/**/*.scss",
     "start": "NODE_ENV=development webpack-dev-server --hot --inline --config ./webpack/dev.conf",
     "build": "rimraf dist && NODE_ENV=production webpack --config ./webpack/prod.conf --progress --profile --bail",
-    "test": "karma start ./webpack/karma.conf"
+    "test": "karma start ./webpack/karma.conf",
+    "prepush": "npm run lint && npm run test"
   },
   "repository": {
     "type": "git",
@@ -93,7 +95,8 @@
     "phantomjs-polyfill": "0.0.2",
     "react-test-renderer": "^16.0.0",
     "sinon": "^4.0.0",
-    "sinon-as-promised": "^4.0.3"
+    "sinon-as-promised": "^4.0.3",
+    "stylelint": "~8.1.1"
   },
   "browserlist": [
     "last 3 versions",
