--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --format node_modules/eslint-friendly-formatter --ext .jsx --ext .js src && stylelint ./src/**/*.scss",
-    "start": "NODE_ENV=development webpack-dev-server --hot --inline --config ./webpack/local.conf",
+    "start": "NODE_ENV=development webpack-dev-server --hot --config ./webpack/local.conf",
     "dev": "NODE_ENV=dev webpack --config ./webpack/dev.conf --progress --profile --bail",
     "qa": "NODE_ENV=qa webpack --config ./webpack/qa.conf --progress --profile --bail",
     "prod": "NODE_ENV=production webpack --config ./webpack/prod.conf --progress --profile --bail",
     "build": "rimraf dist && npm run dev && npm run qa && npm run prod",
-    "test": "karma start ./webpack/karma.conf",
+    "test": "karma start ./webpack/karma/karma.conf",
     "prepush": "npm run lint && npm run test"
   },
   "repository": {
@@ -99,6 +99,7 @@
     "react-test-renderer": "^16.0.0",
     "sinon": "^4.0.0",
     "sinon-as-promised": "^4.0.3",
+    "static-site-generator-webpack-plugin": "^3.4.1",
     "stylelint": "~8.1.1"
   },
   "browserlist": [
