--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --format node_modules/eslint-friendly-formatter --ext .jsx --ext .js src && stylelint ./src/**/*.scss",
-    "start": "NODE_ENV=development webpack-dev-server --hot --config ./webpack/local.conf",
-    "dev": "NODE_ENV=dev webpack --config ./webpack/dev.conf --progress --profile --bail",
-    "qa": "NODE_ENV=qa webpack --config ./webpack/qa.conf --progress --profile --bail",
-    "prod": "NODE_ENV=production webpack --config ./webpack/prod.conf --progress --profile --bail",
+    "start": "NODE_ENV=development webpack-dev-server --hot --config ./webpack/webpack.local.conf",
+    "dev": "NODE_ENV=dev webpack --config ./webpack/webpack.conf --progress --profile --bail",
+    "qa": "NODE_ENV=qa webpack --config ./webpack/webpack.conf --progress --profile --bail",
+    "prod": "NODE_ENV=production webpack --config ./webpack/webpack.conf --progress --profile --bail",
     "build": "rimraf dist && npm run dev && npm run qa && npm run prod",
     "test": "karma start ./webpack/karma/karma.conf",
     "prepush": "npm run lint && npm run test"
@@ -83,6 +83,7 @@
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
     "istanbul-instrumenter-loader": "^0.2.0",
+    "jsdom": "^11.3.0",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
