--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "chai-immutable": "^1.6.0",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
+    "file-loader": "^0.9.0",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jsdom": "^11.3.0",
     "karma": "^1.7.1",
@@ -95,6 +96,7 @@
     "karma-sinon": "^1.0.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.4",
+    "lodash": "^4.17.4",
     "mocha": "^3.5.3",
     "phantomjs-polyfill": "0.0.2",
     "react-test-renderer": "^16.0.0",
