--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "redux-ui": "^0.1.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
   },
